# opsdeck

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  lint.yml  release.yml  test.yml
docs/: codebase-summary.md  system-architecture.md
docs/journals/: 260713-2318-opsdeck-viewer-mvp.md  260713-brainstorm-ccm-ui-feature-extraction.md  260715-new-chat-project-picker.md  260715-promptless-chat-slash-autocomplete.md  260715-remove-configuration-feature.md  260717-ci-lint-test-workflows.md  260717-tag-gated-release-cicd.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  health.rs  lib.rs  main.rs  pricing.rs  state.rs  stats.rs  watcher.rs
src-tauri/src/export/: mod.rs  redact.rs  render_html.rs  render_markdown.rs
src-tauri/src/jobs/: commands.rs  completions.rs  events.rs  mod.rs  options.rs  ring_buffer.rs  settings_file.rs  spawn.rs
src-tauri/src/parser/: meta.rs  mod.rs  normalize.rs  raw.rs
src-tauri/src/profiles/: mod.rs  profile_store.rs
src-tauri/tests/fixtures/: sample_session.jsonl  stream_json_sample.jsonl
src/components/layout/: app-shell.tsx
src/components/theme/: theme-provider.tsx  (+1 more)
src/hooks/: message-jump-context.tsx  selection-context.tsx  use-live-refresh.tsx  use-local-storage.ts
src/lib/: ansi.test.ts  ansi.ts  bindings.ts  command-tags.test.ts  command-tags.ts  format.test.ts  format.ts  i18n.test.ts  i18n.ts  ipc.ts  query-keys.ts  status-colors.ts
(+61 files in other folders)
