[package]
name = "opsdeck"
version = "0.0.1"
description = "OpsDeck - read-only Claude Code session viewer"
authors = ["Cesc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opsdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
notify-debouncer-mini = "0.7"
dirs = "6"
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

